--- a/dry-scan.toml.example
+++ b/dry-scan.toml.example
@@ -17,41 +17,27 @@ threshold = 0.8
 # Default limit for similar pairs/results
 limit = 10
 
-[scan.languages]
+[[scan.patterns]]
 # Language-specific regex patterns for function extraction.
-# Each language (by extension) can have multiple regex patterns.
+# Each group can apply to multiple extensions.
 # Capture groups: if the first capture group exists, it's used as the function name.
-
-ts = [
+extensions = ["ts", "tsx", "js", "jsx"]
+include = [
   "\\bfunction\\s+(\\w+)\\s*\\(",                   # function name() { ... }
   "\\bconst\\s+(\\w+)\\s*=\\s*\\([^)]*\\)\\s*=>",   # const name = () => { ... }
   "\\b(\\w+)\\s*:\\s*function\\s*\\("                # name: function() { ... }
 ]
 
-tsx = [
-  "\\bfunction\\s+(\\w+)\\s*\\(",
-  "\\bconst\\s+(\\w+)\\s*=\\s*\\([^)]*\\)\\s*=>",
-  "\\b(\\w+)\\s*:\\s*function\\s*\\("
-]
-
-js = [
-  "\\bfunction\\s+(\\w+)\\s*\\(",
-  "\\bconst\\s+(\\w+)\\s*=\\s*\\([^)]*\\)\\s*=>",
-  "\\b(\\w+)\\s*:\\s*function\\s*\\("
-]
-
-jsx = [
-  "\\bfunction\\s+(\\w+)\\s*\\(",
-  "\\bconst\\s+(\\w+)\\s*=\\s*\\([^)]*\\)\\s*=>",
-  "\\b(\\w+)\\s*:\\s*function\\s*\\("
-]
-
-py = [
+[[scan.patterns]]
+extensions = ["py"]
+include = [
   "^\\s*def\\s+(\\w+)\\s*\\(",                      # def name(...):
   "^\\s*async\\s+def\\s+(\\w+)\\s*\\("              # async def name(...):
 ]
 
-go = [
+[[scan.patterns]]
+extensions = ["go"]
+include = [
   "\\bfunc\\s+(\\w+)\\s*\\(",                       # func name(...) {
   "\\bfunc\\s+\\([^)]+\\)\\s+(\\w+)\\s*\\("         # func (receiver) name(...) {
 ]
