feat: add embedding chunk size configuration and enhance embedding service to handle large texts

--- a/dry-scan.toml.example
+++ b/dry-scan.toml.example
@@ -3,6 +3,8 @@
 [server]
 # The URL of the DRY server
 url = "http://localhost:3000"
+# Maximum characters per embedding chunk
+embedding_chunk_size = 1000
 
 [scan]
 # File extensions to include in the scan
